assets/css/style.css
:root {
	--color-primary: #ff5349;
}

body {
	font-family: "Montserrat", sans-serif;
}
a {
	text-decoration: none;
}
/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/
.header {
	transition: all 0.5s;
	z-index: 997;
	padding: 20px 0;
}

.header.header-scrolled {
	background: #fff;
	padding: 15px 0;
	box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
}

.header .logo {
	line-height: 0;
}

.header .logo img {
	max-height: 40px;
	margin-right: 6px;
}

/*--------------------------------------------------------------
  # Navigation Menu
  --------------------------------------------------------------*/
/**
  * Desktop Navigation 
  */
.navbar {
	padding: 0;
}

.navbar ul {
	margin: 0;
	padding: 0;
	display: flex;
	list-style: none;
	align-items: center;
}

.navbar li {
	position: relative;
}

.navbar a {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 10px 0 10px 30px;
	font-size: 16px;
	font-weight: 500;
	color: #000;
	white-space: nowrap;
	transition: 0.3s;
}

.navbar a i {
	font-size: 12px;
	line-height: 0;
	margin-left: 5px;
}

.navbar a:hover,
.navbar .active,
.navbar .active:focus,
.navbar li:hover > a {
	color: #ff5349;
}

.navbar .getstarted {
	background: #fff;
	padding: 8px 20px;
	margin-left: 30px;
	border: #ff5349 solid 2px;
	border-radius: 8px;
	color: #ff5349;
}

.navbar .getstarted:hover {
	color: #fff;
	background: #ff5349;
}

/**
  * Mobile Navigation 
  */
.mobile-nav-toggle {
	color: #ff5349;
	font-size: 28px;
	cursor: pointer;
	display: none;
	line-height: 0;
	transition: 0.5s;
}

.mobile-nav-toggle.bi-x {
	color: #fff;
}

@media (max-width: 991px) {
	.mobile-nav-toggle {
		display: block;
	}
	.navbar ul {
		display: none;
	}
}

.navbar-mobile {
	position: fixed;
	overflow: hidden;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	background: rgba(255, 83, 73, 0.9);
	transition: 0.3s;
}

.navbar-mobile .mobile-nav-toggle {
	position: absolute;
	top: 15px;
	right: 15px;
}

.navbar-mobile ul {
	display: block;
	position: absolute;
	top: 55px;
	right: 15px;
	bottom: 15px;
	left: 15px;
	padding: 10px 0;
	border-radius: 10px;
	background-color: #fff;
	overflow-y: auto;
	transition: 0.3s;
}

.navbar-mobile a {
	padding: 10px 20px;
	font-size: 15px;
	color: #000;
}

.navbar-mobile a:hover,
.navbar-mobile .active,
.navbar-mobile li:hover > a {
	color: #ff5349;
}

.navbar-mobile .getstarted {
	margin: 15px;
}
/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
.hero {
	width: 100%;
	height: 100vh;
}

.hero h1 {
	margin: 0;
	font-size: 48px;
	font-weight: 700;
	color: #000;
}

.hero p.hero-paragraph {
	color: #000;
	margin: 15px 0 0 0;
	font-size: 20px;
	font-weight: 400;
}

.hero .btn-get-started {
	line-height: 0;
	padding: 15px 40px;
	border-radius: 8px;
	transition: 0.5s;
	color: #fff;
	background: #ff5349;
}

.hero .btn-get-started span {
	font-weight: 600;
	font-size: 16px;
	letter-spacing: 1px;
}

.hero .btn-get-started i {
	margin-left: 5px;
	font-size: 18px;
	transition: 0.3s;
}

.hero .btn-get-started:hover i {
	transform: translateX(5px);
}

.hero .hero-img {
	text-align: right;
}
.cta-btn-container {
	display: flex;
	flex-direction: row;
	align-items: center;
}
.cta-btn-container > * {
	margin: 20px 0.3rem;
}
.text-gray {
	color: #9b9b9b;
}
a.text-gray {
	font-weight: 500;
	text-decoration: underline;
	transition: all 0.1s ease-out;
}
a.text-gray:hover {
	color: #9b9b9b;
	font-weight: 600;
}
@media (min-width: 1024px) {
	.hero {
		background-attachment: fixed;
	}
}

@media (max-width: 991px) {
	.hero {
		height: auto;
		padding: 120px 0 60px 0;
	}
	.hero .hero-img {
		text-align: center;
		margin-top: 80px;
	}
	.hero .hero-img img {
		width: 80%;
	}
}

@media (max-width: 768px) {
	.hero {
		text-align: center;
	}
	.hero h1 {
		font-size: 32px;
	}
	.hero h2 {
		font-size: 24px;
	}
	.hero .hero-img img {
		width: 100%;
	}
}

@media (max-width: 576px) {
	.cta-btn-container {
		flex-direction: column;
		margin: 10px 0;
	}
	.cta-btn-container > * {
		margin: 3px;
	}
}
/*--------------------------------------------------------------
# Facts Section
--------------------------------------------------------------*/
.facts {
	background-color: var(--color-primary);
	padding: 2.5rem 0;
	color: #fff;
}
.facts .container > * {
	margin: 1.5rem 0;
}
.facts h1 {
	font-weight: 700;
	font-size: calc(1rem + 2vw);
}
.facts p {
	font-size: 1.2rem;
	font-weight: 400;
}
/*--------------------------------------------------------------
# Problem Section
--------------------------------------------------------------*/
.problem {
	min-height: 20vh;
}

